--- a/light.css
+++ b/light.css
@@ -23,6 +23,7 @@ body {
     font-family: "Poppins", sans-serif;
 
     color: black;
+    overflow-x: hidden;
 }
 
 main {
